n8n/n8n-main-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: n8n
spec:
  selector:
    app: n8n-main
  ports:
  - port: 5678
    targetPort: 5678
  type: ClusterIP
