n8n/n8n-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-main
  namespace: n8n
  labels:
    app: n8n-main
spec:
  clusterIP: None
  selector:
    app: n8n-main
  ports:
  - name: http
    port: 5678
    targetPort: 5678
