n8n/n8n-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-test
  namespace: n8n
spec:
  hostnames:
    - n8n-test.app.setur.software
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: web
  rules:
    - filters:
        - requestRedirect:
            port: 443
            scheme: https
            statusCode: 302
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
