n8n/n8n-httpsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-test-https
  namespace: n8n
spec:
  hostnames:
    - n8n-test.app.setur.software
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - name: n8n-service
          namespace: n8n
          port: 5678
      matches:
        - path:
            type: PathPrefix
            value: /
